src/test/ui/consts/array-literal-index-oob.stderr
error: index out of bounds: the len is 3 but the index is 4
  --> $DIR/array-literal-index-oob.rs:2:7
   |
LL |     &{[1, 2, 3][4]};
   |       ^^^^^^^^^^^^
   |
   = note: `#[deny(const_err)]` on by default

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: this expression will panic at runtime
  --> $DIR/array-literal-index-oob.rs:2:5
   |
LL |     &{[1, 2, 3][4]};
   |     ^^^^^^^^^^^^^^^ index out of bounds: the len is 3 but the index is 4

error: reaching this expression at runtime will panic or abort
  --> $DIR/array-literal-index-oob.rs:2:7
   |
LL |     &{[1, 2, 3][4]};
   |     --^^^^^^^^^^^^-
   |       |
   |       index out of bounds: the len is 3 but the index is 4

error: aborting due to 3 previous errors
=======
error: reaching this expression at runtime will panic or abort
  --> $DIR/array-literal-index-oob.rs:2:7
   |
LL |     &{[1, 2, 3][4]};
   |     --^^^^^^^^^^^^-
   |       |
   |       index out of bounds: the len is 3 but the index is 4

error: aborting due to 2 previous errors
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

